# hats-with-friends

./: Cargo.toml  Dockerfile.client  Dockerfile.server  Justfile  README.md  rustfmt.toml
.github/workflows/: docker-publish.yml
client/: Cargo.toml
client/src/: app.rs  lib.rs  resources.rs
client/src/components/: interp.rs  markers.rs  mod.rs
client/src/systems/: camera.rs  connect_status.rs  events.rs  init.rs  input.rs  mod.rs  sync.rs
client/src/systems/gameplay/: camera.rs  input.rs  mod.rs
client/src/systems/network/: connect_status.rs  events.rs  mod.rs  sync.rs
server/: Cargo.toml
server/src/: main.rs  resources.rs
server/src/systems/: events.rs  init.rs
shared/: Cargo.toml
shared/src/: channels.rs  lib.rs  protocol.rs  scene.rs
shared/src/behavior/: mod.rs  physics.rs  process_command.rs
shared/src/components/: collider.rs  color.rs  mod.rs  physics.rs  position.rs  shape.rs
shared/src/messages/: entity_assignment.rs  key_command.rs  mod.rs
shared/src/plugins/: physics.rs
src/: main.rs
web/: index.html  package.json
web/src/: App.tsx  Game.tsx  game.ts  hooks.ts  index.css
web/src/components/: Button.tsx  Input.tsx
