[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
bevy = "0.10"
naia-bevy-client  = { version = "0.20", features = ["transport_webrtc"] }
shared = { path = "../shared" }
cfg-if = "1.0"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84", features = [ "serde-serialize" ] }
