[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
naia-bevy-server  = { version = "0.20", features = ["transport_webrtc"] }
bevy_rapier3d = { version = "0.21", features = ["enhanced-determinism", "serde-serialize"] }
shared = { path = "../shared" }
